--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: backend
     env: python
-    buildCommand: cd backend && pip install -r requirements.txt
+    buildCommand: cd backend && pip install -r backend/requirements.txt
     startCommand: cd backend && gunicorn app:app
     envVars:
       - key: FLASK_ENV
